--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8080
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fitrecipe?characterEncoding=UTF-8&useSSL=false
+server.port=8443
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fit_recipe?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=LiuLanXin0205
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
