--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8443
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fit_recipe?characterEncoding=UTF-8&useSSL=false
+server.port=8080
+dbcp2.validation-query=select 1
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fitrecipe
 spring.datasource.username=root
 spring.datasource.password=LiuLanXin0205
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto = none
 
 
