--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 dbcp2.validation-query=select 1
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fitrecipe
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/healthykitchen
 spring.datasource.username=root
-spring.datasource.password=LiuLanXin0205
+spring.datasource.password=0429sxn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
