--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8443
 dbcp2.validation-query=select 1
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/healthykitchen?useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/healthykitchen?useSSL=false&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=jiantu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
